@@ -11,7 +11,7 @@ use URPM::Resolve;
 use URPM::Signature;
 
 our @ISA = qw(DynaLoader);
-our $VERSION = '4.12';
+our $VERSION = '4.13';
 
 URPM->bootstrap($VERSION);
 
